--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ntua_project
-description: Discover and share! Its all about our pet friends!
+description: Discover and share! It's all about our pet friends!
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -9,17 +9,18 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
-  flutter:
-    sdk: flutter
-
   english_words: ^4.0.0
   provider: ^6.0.0
   http: ^0.13.3  # Add this line to include the http package
+  flip_card: ^0.6.0
+  image_picker: ^0.8.9
+  cupertino_icons: ^1.0.6
+  flutter:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^2.0.0
 
 flutter:
